# toggle

./: .gitignore  COPYING  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  configure.ac
Toggle.xcodeproj/: project.pbxproj
build-aux/: .gitignore  autogen.sh  git-package-version.sh
doc/: .gitignore  service-map.txt  toggled.conf-example
include/: toggled.h  toggled_module.h
lib/: libtoggled.h  libtoggled_errors.c  libtoggled_memory.c
lib/libtoggled/: libtoggled.h  libtoggled.sym  libtoggled_version.c
